Adjusted footer spacing. Adjusted paragraph spacing on index. Updated articles and corrections. Added cartoons. Why not?

--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,28 @@ nav ul li a:active {
     background-image: url(/img/birb112.png)
 }
 
+#reaper {
+    display:block;
+    height: 116px;
+    width: 116px;
+    float: right;
+    position: relative;
+    top: 101px;
+    left: -40px;
+    background-image: url(/img/reaper112.png)
+}
+
+#axolotl {
+    display:block;
+    height: 112px;
+    width: 112px;
+    float: right;
+    position: relative;
+    top: -14px;
+    left: 14px;
+    background-image: url(/img/axolotl112.png)
+}
+
 
         /* ---------  Font Styling  --------- */
 
@@ -269,6 +291,32 @@ h3 {
     font-family: 'Bebas Neue', sans-serif;
     color: #2b2b2b;
     display: block;
+    height:60px;
+    padding-left: 30px;
+}
+
+h3 a{
+    margin-left: 60px;
+    margin-top: 60px;
+    margin-bottom:60px;
+    font-size: 60px;
+    font-family: 'Bebas Neue', sans-serif;
+    color: #d00000;
+    display: block;
+    text-decoration: none;
+    height:60px;
+    padding-left: 30px;
+}
+
+h3 a:hover{
+    margin-left: 60px;
+    margin-top: 60px;
+    margin-bottom:60px;
+    font-size: 60px;
+    font-family: 'Bebas Neue', sans-serif;
+    color: #ff4d4d;
+    display: block;
+    text-decoration: none;
     height:60px;
     padding-left: 30px;
 }
@@ -376,6 +424,7 @@ input[type=text], select, textarea {
     height: 70px;
     width: 1300px;
     font-size: 24px;
+    margin-bottom:20px;
   }
   
   input[type=submit]:hover {
